Bundled Tomcat script fixes